# ControllerTools

./: .gitignore  Dockerfile  LICENSE.md  README.md  compose-dev.yaml  main.py  package.json  package.sh  plugin.json  pnpm-lock.yaml  release.sh  rollup.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: FUNDING.yml  build-backend.yml  build-plugin-snapshot-zip.yml  dev-build.yml
backend/: Cargo.toml  Cross.toml  Dockerfile  build-docker-image.sh  build-docker.sh  build.sh  entrypoint.sh  run-docker-image.sh
backend/src/: api.rs  bindings.rs  controller.rs  header.h  main.rs  settings.rs  ws.rs
backend/src/api/: bluetooth.rs  generic.rs  gulikit.rs  nintendo.rs  playstation.rs  xbox.rs
scripts/: reload_frontend.js  remote_debug.sh
src/: backend.ts  index.tsx  logger.ts  notifications.ts  types.d.ts
src/components/: BatteryIcon.tsx  Controller.tsx  ControllersView.tsx  NoControllersView.tsx  PluginContent.tsx  PluginTitle.tsx  RefreshButton.tsx  SettingsMenu.tsx  VendorIcon.tsx
udev/: 70-controller-tools-hid.rules
