[package]
name = "controller-tools"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["cors"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
hidapi = "2.6.1"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.82"
udev = "0.8.0"

# logging
log = "0.4.21"
simplelog = "0.12.2"