[package]
name = "controller-tools"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["cors"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
hidapi = "2.6.3"
bincode = "1.3.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.91"

# logging
log = "0.4.22"
simplelog = "0.12.2"

[target.x86_64-unknown-linux-gnu.dependencies]
udev = "0.9.1"
